# argos-kilobot-masters-project

./: .gitignore  3d_plot_multiple_ir.py  ASB_experiment_G40_conf5.kconf  ColorCounts.txt  README.md  ROB1_m4_800_k0__alpha0.2_omg0.25nold_comm0.1  ROB1es_m4_800_k0__alpha0.2_omg0.25nold_comm0.1  build_color_chart_from_accumulated_csv.py  build_combined_color_line_chart  build_script.sh  color_noise_finder.py  m_system_noise_run2.json  make_boxplot.py  make_color_line_graph.py  multiple_accuracy_line_plot.py  plot_accuracy.py  plot_and_save_accuracy.py  plot_multiple_averaged_acc.py  save_run_data_in_csv.py  system_noise_plotter.py  system_noise_run1.json  system_noise_run10.json  system_noise_run11.json  system_noise_run12.json  system_noise_run13.json  system_noise_run2.json  system_noise_run3.json  system_noise_run4.json  system_noise_run5.json  system_noise_run6.json  system_noise_run7.json  system_noise_run8.json  system_noise_run9.json
MA-Simulation/: .gitignore  ASB_experiment_G40_conf5.kconf  IR_comp.docx  README.md  agent.py  collage_maker.py  config.yaml  create_best_ir_heatmap_from_csv.py  heatmap_diff_maker.py  heatmap_from_csv.py  heatmap_maker.py  line_plot_speed_acc_tradeoff.py  main.py  plot_graphs.py
noise_json/: m_low_system_noise_run1.json  m_low_system_noise_run2.json  m_low_system_noise_run3.json  m_low_system_noise_run4.json  m_low_system_noise_run5.json  m_system_noise_run1.json
plots_and_scripts_argos/: build_color_chart_from_accumulated_csv.py  multiple_accuracy_line_plot.py  peak_accuracy_100timestep.py  plot_and_save_accuracy.py  plot_multiple_averaged_acc.py  save_run_data_in_csv.py  system_noise_plotter.py
robot_color_output/: robot_0_colors.txt  robot_10019_colors.txt  robot_10027_colors.txt  robot_10029_colors.txt  robot_10037_colors.txt  robot_1004_colors.txt  robot_1008_colors.txt  robot_1009_colors.txt  robot_1010_colors.txt  robot_1011_colors.txt  robot_1013_colors.txt  robot_1019_colors.txt  robot_1023_colors.txt  robot_1034_colors.txt  robot_1037_colors.txt  robot_1040_colors.txt  robot_1043_colors.txt  robot_1044_colors.txt  robot_1048_colors.txt  robot_104_colors.txt  robot_1052_colors.txt  robot_1055_colors.txt  robot_1057_colors.txt  robot_107_colors.txt  robot_108_colors.txt  robot_109_colors.txt  robot_10_colors.txt  robot_11_colors.txt  robot_12_colors.txt  robot_13_colors.txt  robot_14_colors.txt  robot_15_colors.txt  robot_16_colors.txt  robot_17_colors.txt  robot_18_colors.txt  robot_19_colors.txt  robot_1_colors.txt  robot_2008_colors.txt  robot_202_colors.txt  robot_2035_colors.txt  (+89 more)
sensor_color_output/: robot_0_sensor.txt  robot_1000_sensor.txt  robot_10010_sensor.txt  robot_10011_sensor.txt  robot_10012_sensor.txt  robot_10013_sensor.txt  robot_10014_sensor.txt  robot_10015_sensor.txt  robot_10016_sensor.txt  robot_10017_sensor.txt  robot_10018_sensor.txt  robot_10019_sensor.txt  robot_1001_sensor.txt  robot_10020_sensor.txt  robot_10021_sensor.txt  robot_10022_sensor.txt  robot_10023_sensor.txt  robot_10024_sensor.txt  robot_10025_sensor.txt  robot_10026_sensor.txt  robot_10027_sensor.txt  robot_10028_sensor.txt  robot_10029_sensor.txt  robot_1002_sensor.txt  robot_10030_sensor.txt  (+197 more)
src/examples/behaviors/: CMakeLists.txt  agent_main.c  move_and_talk.c  move_and_talk.h
src/examples/loop_functions/: CMakeLists.txt
src/examples/loop_functions/colorful_floor_loop_function/: ASB_experiment_G40_conf1.kconf  ASB_experiment_G40_conf2.kconf  ASB_experiment_G40_conf3.kconf  ASB_experiment_G40_conf4.kconf  ASB_experiment_G40_conf5.kconf  CMakeLists.txt  colorful_floor_loop_function.cpp  colorful_floor_loop_function.h
src/examples/loop_functions/colorful_floor_loop_function/sn035_configs/: ASB_experiment_G40_conf2.kconf
src/examples/loop_functions/zakir_loop_function/: kilogrid_stub.h
(+13721 files in other folders)
